--- a/Resizer_of_images/Resizer_of_images/Resizer_of_images/MainPage.xaml
+++ b/Resizer_of_images/Resizer_of_images/Resizer_of_images/MainPage.xaml
@@ -4,21 +4,16 @@
              x:Class="Resizer_of_images.MainPage">
 
     <StackLayout>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
+        <Frame BackgroundColor="#97f2f3" Padding="24" CornerRadius="0">
+            <Label Text="Resizer_of_images" HorizontalTextAlignment="Center" TextColor="White" FontSize="23"/>
         </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
-        <Label FontSize="16" Padding="30,24,30,0">
-            <Label.FormattedText>
-                <FormattedString>
-                    <FormattedString.Spans>
-                        <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                    </FormattedString.Spans>
-                </FormattedString>
-            </Label.FormattedText>
-        </Label>
+
+        <Frame BackgroundColor="#F1E080" Padding="50" CornerRadius="0">
+            <Label Text="Sample" HorizontalTextAlignment="Center" TextColor="Black" FontSize="17"/>
+            <!--<Button Text="Go to gallery" />-->
+        </Frame>
+        
+        
     </StackLayout>
 
 </ContentPage>
