--- a/Resizer_of_images_v2/Resizer_of_images_v2/Resizer_of_images_v2/Views/ItemsPage.xaml
+++ b/Resizer_of_images_v2/Resizer_of_images_v2/Resizer_of_images_v2/Views/ItemsPage.xaml
@@ -20,15 +20,15 @@
                 SelectionMode="None">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <StackLayout Padding="10" x:DataType="model:Item">
+                    <StackLayout Padding="10" x:DataType="model:Item" BackgroundColor="#fdfd96">
                         <Label Text="{Binding Text}" 
                             LineBreakMode="NoWrap" 
                             Style="{DynamicResource ListItemTextStyle}" 
-                            FontSize="16" />
+                            FontSize="16" TextColor="Black" />
                         <Label Text="{Binding Description}" 
                             LineBreakMode="NoWrap"
                             Style="{DynamicResource ListItemDetailTextStyle}"
-                            FontSize="13" />
+                            FontSize="13" TextColor="Black" />
                         <StackLayout.GestureRecognizers>
                             <TapGestureRecognizer 
                                 NumberOfTapsRequired="1"
@@ -36,6 +36,15 @@
                                 CommandParameter="{Binding .}">
                             </TapGestureRecognizer>
                         </StackLayout.GestureRecognizers>
+                        <Button Text="Go to the gallery"
+                                TextColor="#e6556a"
+                                BackgroundColor="white"
+                                BorderColor="#38a1fc"
+                                BorderWidth="1"
+                                CornerRadius="5"
+                                WidthRequest="80"
+                                HeightRequest="50" 
+                        />
                     </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
