--- a/Resizer_of_images_v2/Resizer_of_images_v2/Resizer_of_images_v2/Views/ItemsPage.xaml
+++ b/Resizer_of_images_v2/Resizer_of_images_v2/Resizer_of_images_v2/Views/ItemsPage.xaml
@@ -44,7 +44,9 @@
                                 CornerRadius="5"
                                 WidthRequest="80"
                                 HeightRequest="50" 
+                                Clicked="Button_Clicked"
                         />
+                        <Label x:Name="Something" />
                     </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
