Added entry for the width and height

--- a/Resizer_of_images_v2/Resizer_of_images_v2/Resizer_of_images_v2/Views/ItemsPage.xaml
+++ b/Resizer_of_images_v2/Resizer_of_images_v2/Resizer_of_images_v2/Views/ItemsPage.xaml
@@ -47,6 +47,9 @@
                                 Clicked="Button_Clicked"
                         />
                         <Label x:Name="Something" />
+                        <Entry Placeholder="Width" />
+                        <Entry Placeholder="height"/>
+
                     </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
